# rename_files

./: CHANGELOG.md  Cargo.toml  README.md  committed.toml  justfile  rustfmt.toml  typos.toml
crates/sample_crate/: Cargo.toml  README.md
crates/sample_crate/src/: app.rs  lib.rs  main.rs  support.rs
crates/sample_crate/src/support/: error.rs  subscriber.rs
dev_log/: cartfix_dev_log.md  dist_dev_log.md  unused.md
dev_log/agent_conversation/: agent_conv-claude_sonnet_4.md  agent_conv_n-claude_sonnet_4.md  cs4.md  cs4_.md  readme.md
src/: error.rs  lib.rs  logging.rs  main.rs
src/snapshots/: rename_files__tests_snapshot__invalid_regex_output.snap.new  rename_files__tests_snapshot__no_matches_output.snap.new  rename_files__tests_snapshot__preview_mode_output.snap.new  rename_files__tests_snapshot__search_only_output.snap.new
xtask/src/: main.rs  types_manual.rs
