[package]
name = "rename_files"
version = "0.5.0"
authors = ["Ethan Skowronski-Lutz"]
edition = "2024"
repository = "https://github.com/ethanmsl/rename_files"
homepage = "https://ethanmsl.github.io/rename_files/"
categories = ["command-line-utilities", "file-system", "text-processing"]
publish = true
description = "CLI tool (& lib); regex search files & optionally rename. Recursive and Test flags available, but intentionally minimal."

[lints.rust]
unsafe_code = { level = "forbid" }

[lints.clippy]
uninlined_format_args = "allow" # syntax highlighting doesn't currently capture inlined variables "words {var}" vs "words {}, var"

[dependencies]
clap = { version = "4", features = ["derive", "wrap_help"] } # "derive", "env", "string", "unicode", "wrap_help",
owo-colors = "4"
regex = { version = "1", features = ["logging"] } # "logging"
tracing = { version = "0.1", features = [] } # "release_max_level_warn"^"release_max_level_off"
tracing-subscriber = { version = "0.3", features = ["env-filter"] } # "env-filter","json"
thiserror = "2"
walkdir = "2"

[dev-dependencies]
anyhow = { version = "1", features = [] } # "backtrace"
expect-test = "1"
# quickcheck = "1"
# quickcheck_macros = "1"
# rand = {version = "0.9", features = []} # "serde", "simd_support", "log"
tempfile = "3"
test-log = { version = "0.2", features = ["trace"] } # "trace"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Which actions to run on pull requests
pr-run-mode = "plan"
# A GitHub repo to push Homebrew formulas to
tap = "ethanmsl/homebrew-rename_files"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
