[package]
name = "sample_crate"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[lints]
workspace = true


[dependencies]
## --Async--
futures = { workspace = true }
tokio = { workspace = true, features = ["full"] }
### - Remote -
reqwest = { workspace = true, features = ["blocking", "json"] }
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio", "tls-rustls"] }

## --Diagnostics--
tracing = { workspace = true, features = [] }
#                  "release_max_level_warn"^"release_max_level_off"
tracing-appender = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
tracing-timing = { workspace = true }

## --Env & Files--
arboard = { workspace = true }
csv = { workspace = true }
dotenvy = { workspace = true }
include_dir = { workspace = true }
secrecy = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }
### Config
config = { workspace = true }
directories = { workspace = true }
### System & Processes
rexpect = { workspace = true, features = ["which"] }

## --Ergonomics--
bon = { workspace = true }
derive_more = { workspace = true, features = ["full"] }
indoc = { workspace = true }
itertools = { workspace = true }
nestify = { workspace = true }
strum = { workspace = true, features = ["derive", "phf"] }

## --Interface--
### - CLI -
clap = { workspace = true, features = [
    "env",
    "cargo",
    "derive",
    "string",
    "unicode",
    "wrap_help",
] }
clap-verbosity-flag = { workspace = true }
dialoguer = { workspace = true }
owo-colors = { workspace = true }
tabled = { workspace = true }
json_to_table = { workspace = true }
### - egui -
eframe = { workspace = true, default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
] }
egui = { workspace = true, features = ["callstack", "document-features"] }
egui_extras = { workspace = true, features = [
    "datepicker",
    "document-features",
    "serde",
    "syntect",
] }
egui_table = { workspace = true }
egui_inbox = { workspace = true }

# ## --Math & Science--
# ### - Data -
# polars = { workspace = true, features = [] }
# ### - Math -
faer = { workspace = true }
rand = { workspace = true }

## --Parsing--
regex = { workspace = true, features = ["logging"] }
monostate = { workspace = true }                     # serde: constraining, zero-sized type
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

## --Time--
jiff = { workspace = true, features = ["js", "logging", "serde"] }


[dev-dependencies]
# Dev-Dependencies
##__Benchmarking__
divan = { workspace = true }
## __Test_Ergonomics__
pretty_assertions = { workspace = true }
test-log = { workspace = true, features = ["trace"] }
## __Property Sample Testing__
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true }
## __Snapshot Testing__
insta = { workspace = true, features = [
    "clap",
    "csv",
    "json",
    "redactions",
    "serde",
    "toml",
    "walkdir",
] }
